# seq-agent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.musl  README.md
.github/workflows/: ci.yml
scripts/: build-aarch64.sh
src/: lib.rs  proto.rs
